Modal input feature appears to be missing from 2.70 test builds #38743

Closed
opened 2014-02-21 17:17:54 +01:00 by Sam Brubaker · 16 comments

Version: 2.70 test release (win 64)

I apologize if this is already known, but it appears that this feature is not implemented in the 2.70 test builds that were released yesterday. When transforming an object by entering a value, the header display does look different, but does not accept any math operators or letters. To reproduce, try transforming an object in the 3d view by entering a simple math expression (2*6, 100+73, etc.).

Did this feature simply not make it into this particular build, or am I using it incorrectly? Again, I apologize if this is the case.

Version: 2.70 test release (win 64) I apologize if this is already known, but it appears that [this feature ](http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.70/UI#Modal_Numinput) is not implemented in the 2.70 test builds that were released yesterday. When transforming an object by entering a value, the header display does look different, but does not accept any math operators or letters. To reproduce, try transforming an object in the 3d view by entering a simple math expression (2*6, 100+73, etc.). Did this feature simply not make it into this particular build, or am I using it incorrectly? Again, I apologize if this is the case.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Author

There is a note on the wiki:

Did not touch to how values are shown in header when modal numinput is not enabled (would do that in another commit), so this is still quite inconsistent.

This might explain the results I'm getting. But if Modal numinput is not enabled, where exactly does one enable/disable it?

There is a note on the wiki: *Did not touch to how values are shown in header when modal numinput is not enabled (would do that in another commit), so this is still quite inconsistent.* This might explain the results I'm getting. But if Modal numinput is not enabled, where exactly does one enable/disable it?

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Try the "=" key, there were recent changes here.

Try the "=" key, there were recent changes here.

Added subscriber: @mont29

Added subscriber: @mont29

@mont29: Time to update the wiki /release logs I guess. :)

@mont29: Time to update the wiki /release logs I guess. :)
Bastien Montagne was assigned by Thomas Dinges 2014-02-21 18:09:43 +01:00
Author

Thank you, @dingto. I tried the "=" key but it has no effect.

Thank you, @dingto. I tried the "=" key but it has no effect.
See here for recent changes. https://developer.blender.org/rB32d6f853f33c107fd3afbff7845269c41c2686d4

Added subscriber: @hjaarnio

Added subscriber: @hjaarnio

Does not seem to work on layout that doesn't have a dedicated = key, but = is produced with eg shift-0.

Does not seem to work on layout that doesn't have a dedicated = key, but = is produced with eg shift-0.

Yeah, known issue with non-EN keyboards, we do have many shortcuts that do not work... :/

Will add '*' in addition to '=', should do the trick for now (and update release notes of course, too).

Yeah, known issue with non-EN keyboards, we do have many shortcuts that do not work... :/ Will add '*' in addition to '=', should do the trick for now (and update release notes of course, too).

This issue was referenced by blender/blender-addons-contrib@c1cdce364b

This issue was referenced by blender/blender-addons-contrib@c1cdce364bc1f122db2ce72a15fc969a375d0f4e

This issue was referenced by c1cdce364b

This issue was referenced by c1cdce364bc1f122db2ce72a15fc969a375d0f4e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c1cdce364b.

Closed by commit c1cdce364b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38743
No description provided.