Fix T38743: Modal input feature appears to be missing from 2.70 test builds

Add 'pad *' in addition to '=' to toggle basic/advanced numinput modes.